--- a/localization/jpn/AigisMod-Power-Strings.json
+++ b/localization/jpn/AigisMod-Power-Strings.json
@@ -129,7 +129,7 @@
         },
         "aigisMod:VictorySword": {
                 "NAME": "勝利の剣",
-                "DESCRIPTIONS": [" 1 ターンに一度、#y白の帝国 #yキャラクター をプレイした時、ドロー #b", "このターンすでに発動している。"]
+                "DESCRIPTIONS": [" 1 ターンに一度、 #y白の帝国 #yキャラクター をプレイした時、ドロー #b", "このターンすでに発動している。"]
         },
         "aigisMod:ImperialCooking": {
                 "NAME": "帝国式調理術",
@@ -278,7 +278,7 @@
 
         "aigisMod:MeteorTactics": {
                 "NAME": "天落岩の計",
-                "DESCRIPTIONS": ["流星オーブが全ての敵を攻撃する。"]
+                "DESCRIPTIONS": ["流星オーブのダメージは #b", " 上昇する。 流星オーブが全ての敵を攻撃する。"]
         },
 
         "aigisMod:MultiPlosion": {
@@ -338,7 +338,7 @@
 
         "aigisMod:SpiritBoost": {
                 "NAME": "スピリットブースト",
-                "DESCRIPTIONS": ["ターン開始時、手札の #yアタック カードのコストをこのターン #b", " 減少する。 #yアタック を #yプレイ した時、 #y全て の #yエナジー を消費する。"]
+                "DESCRIPTIONS": ["#yアタック を #yプレイ した時、 #y全て の #yエナジー を消費する。"]
         },
 
         "aigisMod:AnnihilationProgram": {
@@ -374,6 +374,19 @@
         "aigisMod:DivineStaffDagda": {
                 "NAME": "ダグザの神杖",
                 "DESCRIPTIONS": ["HPを回復するか #y仮初のHP を得た時、 #y筋力 #b", " と #b", " #yブロック を得る。"]
+        },
+
+        "aigisMod:ImperialSmith": {
+                "NAME": "帝国鍛冶師",
+                "DESCRIPTIONS": ["#yストライク #yカード をプレイした時、 この戦闘中ストライクのダメージが #b", " 上昇する。"]
+        },
+        "aigisMod:OverclockPower": {
+                "NAME": "オーバークロック",
+                "DESCRIPTIONS": ["次にプレイする #y白の帝国 #yカード が #b2 回発動する。"]
+        },
+        "aigisMod:CommanderInspiration": {
+                "NAME": "教導隊長の鼓舞",
+                "DESCRIPTIONS": ["1ターンに1回、 #yストライク が #y防御 をプレイした時、 エナジー #b", " を得る。", "効果は発動している。"]
         },
 
         "aigisMod:StrengthForTheTurnPower": {
