--- a/localization/jpn/AigisMod-UI-Strings.json
+++ b/localization/jpn/AigisMod-UI-Strings.json
@@ -134,6 +134,20 @@
     ]
   },
 
+  "RuteKnightAction": {
+    "TEXT": [
+      "帝国騎士カードを1枚手札に加える",
+      "山札に帝国騎士カードがない…"
+    ]
+  },
+
+  "RuteStrikeAction": {
+    "TEXT": [
+      "ストライクを1枚手札に加える",
+      "捨て札にストライクがない…"
+    ]
+  },
+
   "LilyAction": {
     "TEXT": [
       "手札から選んでプレイする（任意）"
@@ -200,7 +214,11 @@
       "弱体.",
       "毒",
       " NL 弱体 ", " を与える。",
-      " NL 毒 ", " を与える。"
+      " NL 毒 ", " を与える。",
+      "鈍足.",
+      " aigismod:鈍足 ", " を与える。 ",
+      "エナジー",
+      "エナジー", " を得る。"
     ]
   },
   "BelpheAction": {
