--- a/localization/zhs/AigisMod-UI-Strings.json
+++ b/localization/zhs/AigisMod-UI-Strings.json
@@ -102,8 +102,8 @@
 
   "PrincessMaidAction": {
     "TEXT": [
-      "选择一张牌加入到你的手牌中。",
-      "选择牌加入到你的手牌中。",
+      "选择一张牌你的加入到手牌。",
+      "选择牌加入到你的手牌。",
       "我的牌组里没有公主牌..."
     ]
   },
@@ -131,6 +131,20 @@
     "TEXT": [
       "选择一张帝国牌加入到你的手牌中。",
       "我的牌组中没有帝国牌..."
+    ]
+  },
+
+  "RuteKnightAction": {
+    "TEXT": [
+      "选择一张帝国骑士牌加入到你的手牌中。",
+      "我的牌组中没有帝国骑士牌..."
+    ]
+  },
+
+  "RuteStrikeAction": {
+    "TEXT": [
+      "选择一张打击加入你的手牌。",
+      "我的弃牌堆中没有打击..."
     ]
   },
 
@@ -200,7 +214,11 @@
       " 易伤 。",
       " 中毒 。",
       " NL 施加 ", " 易伤 。",
-      " NL 施加 ", " 中毒 。"
+      " NL 施加 ", " 中毒 。",
+      " 减速 。",
+      " NL 施加 ", " 减速 。",
+      " 能量 。",
+      " NL 获得 ", " 能量 。"
     ]
   },
   "BelpheAction": {
@@ -275,6 +293,7 @@
       "检视英杰牌"
     ]
   },
+
 
   "SumireAction": {
     "TEXT": [
