--- a/localization/jpn/AigisMod-Relic-Strings.json
+++ b/localization/jpn/AigisMod-Relic-Strings.json
@@ -115,7 +115,7 @@
     "FLAVOR": "「 (尖)塔の階層を制したご褒美に、「英傑結晶」をあげちゃいます」-ソラス",
     "DESCRIPTIONS": [
       "戦闘勝利時に、 #b1 ポイント獲得する。 ",
-      "マップ画面（戦闘/イベント/キャンプ以外）で、 #b200 #yゴールド と #b5 ポイントを持っている場合、このレリックを #y右クリック する と #yアンコモン #y英傑 カード #b1 枚を選んで加える。 すでに所持している同名カード(レア含む)は代わりにアップグレードする。",
+      "マップ画面（戦闘/イベント/キャンプ以外）で、 #b200 #yゴールド と #b5 ポイントを持っている場合、このレリックを #y右クリック する と 好きな #yアンコモン #y英傑 カード1枚と交換できる。 すでに所持している同名カード(レア含む)は代わりにアップグレードする。",
       "使うことができない…",
       "200ゴールドと5ポイントを消費してでデッキに加えるカードを選択。"
     ]
@@ -137,11 +137,10 @@
     "NAME": "帝国の勇者",
     "FLAVOR": "帝国で最も強い者に与えられる称号。",
     "DESCRIPTIONS": [
-      "戦闘に #b5 回勝利するごとに永続的な効果を得る。効果は最大 #b4 つ",
-      " NL #y1. スキルをプレイした時 自分の #y弱体 を取り除く。",
+      "#yストライク が #y貫通 #yダメージ になる。 NL 戦闘に #b5 回勝利するごとに永続的な効果を得る。効果は最大 #b3 つ追加される",
+      " NL #y1. #yストライク と #y防御 の効果が #b2 上昇する。",
       " NL #y2. アタックをプレイした時 自分の #y脱力 を取り除く。",
-      " NL #y3. #yストライク と #y防御 の効果が #b2 上昇する。",
-      " NL #y4. #yストライク が #y貫通 #yダメージ になる。"
+      " NL #y3. スキルをプレイした時 自分の #y弱体 を取り除く。"
     ]
   },
 
@@ -240,6 +239,14 @@
     "FLAVOR": "「……いや、帝国で生きるということは、勝ち続けるということと同義なのだ」-白の皇帝",
     "DESCRIPTIONS": [
       "#yボス と #yエリート との戦闘開始時、#y筋力 #b3 と#敏捷性 #b3 を得る。"
+    ]
+  },
+  "aigisMod:DemonicRelease": {
+    "NAME": "魔の解放",
+    "FLAVOR": "「魔物になったリィーリを助けてくれて、ありがとうございます。」-リィーリ",
+    "DESCRIPTIONS": [
+      "1ターンに1回、 #yストライク のダメージが #y2 倍になる。",
+      "1ターンに1回、 #yストライク か #y防御 をプレイした時 #yデーモン を捨て札から #b1 枚 #y廃棄 できる。"
     ]
   },
 
@@ -366,7 +373,7 @@
     "FLAVOR": "「デシウスは勝つためには手段を選ばない、すっごく卑劣な男なんです！」-ミーティア",
     "DESCRIPTIONS": [
       "最初の #b4 ターンはターン終了時、 #b5 #yブロック を得る。",
-      "1マップに1回、 HP が #b0 になった時 #b25 HP を得る。"
+      "1マップに1回、戦闘中に HP が #b0 になった時 #b25 HP を得る。"
     ]
   },
   "aigisMod:MaouDecius": {
@@ -374,7 +381,7 @@
     "FLAVOR": "「――嗚呼、星の声が聞こえる。何と美しい、調べなのだろうか……。」-デシウス",
     "DESCRIPTIONS": [
       "#pアーマードデシウス と置き換える。 デッキに大爪形態を #b1 枚 追加する。",
-      "1マップに1回、 HP が #b0 になった時 #b35 HP を得る。 "
+      "1マップに1回、戦闘中に HP が #b0 になった時 #b35 HP を得る。 "
     ]
   },
   "aigisMod:MeteorSword": {
@@ -412,7 +419,7 @@
     "NAME": "爆砕強化の秘術",
     "FLAVOR": "「魔力の精髄を極めること それが私の使命です。」-ガラニア",
     "DESCRIPTIONS": [
-      "戦闘開始時、敵が #2 体以上の時、 #y流星 #b1 を #y生成 する。",
+      "戦闘開始時、敵が #b2 体以上の時、 #y流星 #b1 を #y生成 する。",
       " 戦闘中敵が追加された時、 #y流星 #b1 を #y生成 する。"
     ]
   },
