--- a/localization/zhs/AigisMod-Event-Strings.json
+++ b/localization/zhs/AigisMod-Event-Strings.json
@@ -8,29 +8,29 @@
       "你远超他们的期望。"
     ],
     "OPTIONS": [
-      "[招募] #g获得一张罕见英杰卡牌 ",
-      "[战斗] #g将一张罕见英杰卡牌升级至稀有 ",
+      "[招募] #g获得一张罕见英杰卡牌 。",
+      "[战斗] #g将一张罕见英杰卡牌升级至稀有 。",
       "[离开]",
-      "选择一张英杰卡牌添加到你的牌组中",
-      "[招募] #g获得一张稀有英杰卡牌 ",
-      "[未解锁] 你没有可以升级至稀有的英杰卡牌"
+      "选择一张英杰卡牌添加到你的牌组中。",
+      "[招募] #g获得一张稀有英杰卡牌 。",
+      "[未解锁] 你没有可以升级至稀有的英杰卡牌。"
     ]
   },
 
   "aigisMod:AigisShrine": {
     "NAME": "埃癸斯神殿",
     "DESCRIPTIONS": [
-      "你碰见一座熟悉的神殿。 NL 这是女神埃癸斯的化身。 NL 你可以从女神那里接受一项祝福。",
-      "你离开了神殿并继续你的冒险。"
+      "你碰见一座熟悉的神殿。 NL 这里是女神埃癸斯的圣所。 NL 你可以从女神那里接受一项祝福。",
+      "你离开了神殿，继续你的旅途。"
     ],
     "OPTIONS": [
-      "[捐款] #g献上 #b100 #g金币以获得遗物",
-      "[祈祷] #g升级一张牌",
-      "[召唤] #g从 #b20 张牌中选择 #b1 #g张牌加入你的牌组",
+      "[捐赠] #g花费 #b100 #g金币获得遗物。 ",
+      "[祈祷] #g升级一张牌。 ",
+      "[召唤] #g从 #b20 #g张牌中选择 #b1 #g张加入牌组。 ",
       "[离开]",
       "选择一张牌加入你的牌组",
-      "[未解锁] 你没有足够的金币(100)",
-      "[未解锁] 你没有可以升级的牌",
+      "[锁定] 没有足够金币（100）。",
+      "[锁定] 你没有可以升级的牌。",
       "选择一张牌升级"
     ]
   },
@@ -39,18 +39,18 @@
     "NAME": "军队训练",
     "DESCRIPTIONS": [
       "帝国到达了与王国军会面的集合点。 NL 因为距离远征继续还有一段时间，你决定在此期间强化你的军队。",
-      "你选择重新编排自己的单位。",
-      "你选择和自己的军队一同训练。",
-      "你在战斗后觉醒了新的能力"
+      "你决定重新编排你的军队。",
+      "你决定训练你的军队。",
+      "你在战斗后觉醒了新的能力。"
     ],
     "OPTIONS": [
-      "[重组] #g将一张牌加入牌组",
-      "[训练] #gU升级一张牌",
-      "[战斗] #g挑战 #r王子",
+      "[重组] #g将一张牌加入牌组。 ",
+      "[训练] #g升级一张牌。 ",
+      "[战斗] #g挑战 #r王子 。 ",
       "[离开]",
-      "[未解锁] 你没有可以升级的牌。",
-      "选择一张牌升级。",
-      "[觉醒] #g获得一个遗物"
+      "[锁定] 没有可升级的牌。",
+      "选择一张牌升级",
+      "[觉醒] #g获得一个遗物。 "
     ]
   },
 
@@ -60,11 +60,11 @@
     "DESCRIPTIONS": [
       "你面前躺着一具尸体，他手中拿着神秘的宝石。 NL 你在这个房间里还看到了一个镀金的宝箱。 你感觉到宝石中有能量传来，但宝箱也同样令人在意。",
       "当你拿起宝石时，你立刻意识到这颗宝石来自被诅咒的异教徒。你有责任妥善保管它，但它的力量也同样能助你一臂之力。",
-      "不出意料，这是一只魔物"
+      "不出意料，这是一只魔物。"
     ],
     "OPTIONS": [
-      "[搜寻] #g检查黄金宝箱?",
-      "[拿走宝石] #g获得1个遗物和 #r一个诅咒",
+      "[搜寻] #g检查一下 #r黄金宝箱？ ",
+      "[拿走宝石] #g获得一个遗物 和 #r一张诅咒 。",
       "[离开]",
       "[战斗]"
     ]
@@ -73,14 +73,14 @@
     "NAME": "声音",
     "DESCRIPTIONS": [
       "在穿过楼层时你突然失去了意识，并且渐渐地听到了一种声音...",
-      "出于某些原因，你受到了鼓舞，并感觉自己变得更强大了",
-      "你在自己的体内感觉到了熟悉的力量",
-      "你应该更警觉的"
+      "出于某些原因，你受到了鼓舞，并感觉自己变得更强大了。",
+      "你在自己的体内感觉到了熟悉的力量。",
+      "你应该更警觉的。"
     ],
     "OPTIONS": [
-      "[星星?] #g最大生命+8",
-      "[团长?] #g获得一个遗物",
-      "[醒来] 离开"
+      "[星星?] #g最大生命+8。 ",
+      "[指挥官?] #g获得一个遗物。 ",
+      "[醒来] 离开。 "
     ]
   }
 }
