--- a/localization/zhs/AigisMod-Orb-Strings.json
+++ b/localization/zhs/AigisMod-Orb-Strings.json
@@ -1,18 +1,9 @@
 {
-  "myMod:DefaultOrb": {
-    "NAME": "预设充能球",
-    "DESCRIPTION": [
-      "#y被动： 你的回合开始时，抽 #b",
-      " 张牌。",
-      " 张牌。",
-      " NL #y激发：对所有敌人造成 #b",
-      " 点伤害。"
-    ]
-  },
   "aigisMod:MeteorOrb": {
     "NAME": "流星充能球",
     "DESCRIPTION": [
-      "#y被动： 当你打出一张 #y流星 牌时， 根据其耗能提升此充能球的伤害，然后对一名随机敌人造成 #b",
+      " #y被动： 当你打出一张 #y流星 牌时， 根据其耗能提升此充能球的伤害。",
+      " 在你的回合结束时，对一名随机敌人造成 #b",
       " 点伤害。",
       " NL #y激发: 对一名随机敌人造成 #b",
       " 点伤害。"
