--- a/localization/zhs/AigisMod-Event-Strings.json
+++ b/localization/zhs/AigisMod-Event-Strings.json
@@ -79,7 +79,7 @@
     ],
     "OPTIONS": [
       "[星星?] #g最大生命+8。 ",
-      "[指挥官?] #g获得一个遗物。 ",
+      "[团长?] #g获得一个遗物。 ",
       "[醒来] 离开。 "
     ]
   }
