--- a/localization/jpn/AigisMod-Power-Strings.json
+++ b/localization/jpn/AigisMod-Power-Strings.json
@@ -133,7 +133,7 @@
         },
         "aigisMod:ImperialCooking": {
                 "NAME": "帝国式調理術",
-                "DESCRIPTIONS": [" #y白の帝国 カードを #b", " 枚プレイした時、  #y筋力 #b", " と #y敏捷性  #b", " を得る。", " 使用 白の帝国 カード #b"]
+                "DESCRIPTIONS": [" #y白の帝国 カードを #b", " 枚プレイした時、 #y筋力 #b", " と #y敏捷性  #b", " を得る。", " 使用 白の帝国 カード #b"]
         },
         "aigisMod:ImperialInventor": {
                 "NAME": "帝国発明家",
@@ -374,6 +374,19 @@
         "aigisMod:DivineStaffDagda": {
                 "NAME": "ダグザの神杖",
                 "DESCRIPTIONS": ["HPを回復するか #y仮初のHP を得た時、 #y筋力 #b", " と #b", " #yブロック を得る。"]
+        },
+
+        "aigisMod:ImperialSmith": {
+                "NAME": "帝国鍛冶師",
+                "DESCRIPTIONS": ["#yストライク #yカード をプレイした時、 この戦闘中ストライクのダメージが #b", " 上昇する。"]
+        },
+        "aigisMod:OverclockPower": {
+                "NAME": "オーバークロック",
+                "DESCRIPTIONS": ["次にプレイする #y白の帝国 #yカード が #b2 回発動する。"]
+        },
+        "aigisMod:CommanderInspiration": {
+                "NAME": "教導隊長の鼓舞",
+                "DESCRIPTIONS": ["1ターンに1回、 #yストライク が #y防御 をプレイした時、 エナジー #b", " を得る。", "効果は発動している。"]
         },
 
         "aigisMod:StrengthForTheTurnPower": {
