--- a/localization/jpn/AigisMod-Relic-Strings.json
+++ b/localization/jpn/AigisMod-Relic-Strings.json
@@ -246,7 +246,7 @@
     "FLAVOR": "「魔物になったリィーリを助けてくれて、ありがとうございます。」-リィーリ",
     "DESCRIPTIONS": [
       "1ターンに1回、 #yストライク のダメージが #y2 倍になる。",
-      "1ターンに1回、 #yストライク か #y防御 をプレイした時 #yデーモン を捨て札から #b1 枚 #y廃棄 できる。"
+      "1ターンに1回、 #yストライク か #y防御 をプレイした時 #yデーモン を山札から #b1 枚 #y廃棄 できる。"
     ]
   },
 
