--- a/localization/zhs/AigisMod-Relic-Strings.json
+++ b/localization/zhs/AigisMod-Relic-Strings.json
@@ -243,7 +243,7 @@
   },
   "aigisMod:DemonicRelease": {
     "NAME": "魔之解放",
-    "FLAVOR": "莉莉: 谢谢你救了变成魔物的莉莉。",
+    "FLAVOR": "莉莉: 谢谢你解放了真正的我。",
     "DESCRIPTIONS": [
       "每回合第一张 #y打击 的伤害翻倍。",
       "每回合一次: 当你打出 #y打击 或 #y防御 时，可以选择 #y消耗 抽牌堆中 #b1 张 #y恶魔牌 。"
